tests/snapshots/raw__examples_in_informal_reference-60.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"\\u{000D}\")"
---
Ok(
    [
        Token {
            class: whitespace,
            length: 1,
        },
    ],
)
