tests/snapshots/raw__examples_in_informal_reference-61.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"\\u{0020}\")"
---
Ok(
    [
        Token {
            class: whitespace,
            length: 1,
        },
    ],
)
