tests/snapshots/raw__examples_in_informal_reference-62.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"\\u{0085}\")"
---
Ok(
    [
        Token {
            class: whitespace,
            length: 2,
        },
    ],
)
