tests/snapshots/raw__examples_in_informal_reference-63.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"\\u{200E}\")"
---
Ok(
    [
        Token {
            class: whitespace,
            length: 3,
        },
    ],
)
