tests/snapshots/raw__examples_in_informal_reference-64.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"\\u{200F}\")"
---
Ok(
    [
        Token {
            class: whitespace,
            length: 3,
        },
    ],
)
