tests/snapshots/raw__examples_in_informal_reference-66.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"\\u{2029}\")"
---
Ok(
    [
        Token {
            class: whitespace,
            length: 3,
        },
    ],
)
