tests/snapshots/raw__examples_in_informal_reference-67.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"98_222\")"
---
Ok(
    [
        Token {
            class: decimal_integer,
            length: 6,
        },
    ],
)
