tests/snapshots/raw__examples_in_informal_reference-68.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0xff\")"
---
Ok(
    [
        Token {
            class: hexadecimal_integer,
            length: 4,
        },
    ],
)
