tests/snapshots/raw__examples_in_informal_reference-69.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0o77\")"
---
Ok(
    [
        Token {
            class: octal_integer,
            length: 4,
        },
    ],
)
