tests/snapshots/raw__examples_in_informal_reference-7.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"enum\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 4,
        },
    ],
)
