tests/snapshots/raw__examples_in_informal_reference-70.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0b1111_0000\")"
---
Ok(
    [
        Token {
            class: binary_integer,
            length: 11,
        },
    ],
)
